[package]
name = "react2shell-scanner"
version = "0.1.0"
edition = "2021"
description = "High Fidelity Detection for RSC/Next.js RCE (CVE-2025-55182 & CVE-2025-66478)"
authors = ["Assetnote Security Research Team"]
license = "MIT"

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
colored = "2"
futures = "0.3"
url = "2"
thiserror = "1"
once_cell = "1"
atty = "0.2"
spider = "2"
comfy-table = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true
